force-app/main/default/objects/Ticket__c/fields/DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountPrice__c</fullName>
    <label>Discount Price</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>