force-app/main/default/objects/Ticket__c/fields/EventVenueAddress__c.field-meta.xml
<CustomField>
    <fullName>EventVenueAddress__c</fullName>
    <label>Event Venue Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>