force-app/main/default/objects/Ticket__c/fields/TicketPrice__c.field-meta.xml
<CustomField>
    <fullName>TicketPrice__c</fullName>
    <label>Ticket Price</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>