force-app/main/default/objects/Ticket__c/fields/TicketSent__c.field-meta.xml
<CustomField>
    <fullName>TicketSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Sent?</label>
    <type>Checkbox</type>
</CustomField>