force-app/main/default/objects/Ticket__c/fields/TicketType__c.field-meta.xml
<CustomField>
    <fullName>TicketType__c</fullName>
    <label>Ticket Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Earlybird</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Community Leader</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>