force-app/main/default/objects/Ticket__c/fields/VenueDirection__c.field-meta.xml
<CustomField>
    <fullName>VenueDirection__c</fullName>
    <label>Venue Direction</label>
    <type>Url</type>
</CustomField>