force-app/main/default/objects/Ticket__c/fields/VenueName__c.field-meta.xml
<CustomField>
    <fullName>VenueName__c</fullName>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>