force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee__c</columns>
    <columns>Event__c</columns>
    <columns>Status__c</columns>
    <columns>TicketPrice__c</columns>
    <columns>TShirtSize__c</columns>
    <columns>TicketSent__c</columns>
    <columns>VenueName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>